--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/add.html
@@ -39,7 +39,7 @@
 					<div class="layui-form-item">
 						<label class="layui-form-label">描 述：</label>
 						<div class="layui-input-block">
-							<textarea type="text" name="description" placeholder="请输入描 述" lay-verify="description" required autocomplete="off" class="layui-textarea" autofocus="autofocus" maxlength="150"></textarea>
+							<textarea type="text" name="description" placeholder="请输入描 述" lay-verify="description" autocomplete="off" class="layui-textarea" autofocus="autofocus" maxlength="150"></textarea>
 						</div>
 					</div>
 					<div class="layui-form-item">
