--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/templateTab.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/templateTab.html
@@ -12,7 +12,7 @@
 			<div class="layui-main">
 				<!--/***** 面包屑 *****/-->
 				<div class="layui-elem-quote" style="margin-top: 10px;">
-					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a href="#">模版配置</a> <a><cite>列表</cite></a>
+					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a th:href="@{/admin/m/base/template/list.gsp}">模版配置</a> <a><cite>列表</cite></a>
 					</span>
 				</div>
 				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
