--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/menu_admin.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/fragments/menu_admin.html
@@ -116,7 +116,7 @@
 						</a>
 					</dd>
 					<dd th:classappend="${child=='global'} ? 'layui-this'">
-						<a th:href="@{/admin/m/base/global/list.gsp}"> <i class="layui-icon">&#xe617;</i> <cite> 全局参数</cite>
+						<a th:href="@{/admin/c/global/list.gsp}"> <i class="layui-icon">&#xe617;</i> <cite> 全局参数</cite>
 						</a>
 					</dd>
 					<dd th:classappend="${child=='template'} ? 'layui-this'">
