常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/green/index.html
+++ b/tg-cms/src/main/webapp/template/green/index.html
@@ -5,7 +5,6 @@
 </head>
 
 <body>
-	<span tg_core:sys_info="copy_info">ssssssssss</span>
 	<div class="wrapper">
 		<!--=== Header ===-->
 		<div class="header">
@@ -1020,13 +1019,13 @@
 				</div>
 			</div>
 			<!--/footer-->
-
+			<!--版权信息-->
 			<div class="copyright">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6">
 							<p>
-								2015 &copy; All Rights Reserved. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+								<span tg_core:sys_info="copy_info">ssssssssss</span> <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
 							</p>
 						</div>
 
