--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/edit.html
@@ -20,7 +20,7 @@
 				</blockquote>
 				<form th:action="@{/admin/m/base/template/edit.gsp}" th:object="${result}" class="layui-form" id="editForm" role="form" action="#" method="post">
 					<fieldset class="layui-elem-field layui-field-title">
-						<legend>新增模版</legend>
+						<legend>编辑模版</legend>
 					</fieldset>
 					<input th:field="*{id}" type="text" hidden="true" />
 					<div class="layui-form-item">
